# fyp

./: .gitignore  Justfile  Makefile  README.md  notes.md
.github/workflows/: build-pdf.yml
aes-ctr-r0/: Justfile  Makefile  README.md
aes-ctr-r0/methods/: Cargo.toml
aes-ctr/aesencryption/: Cargo.toml
aes-ctr/methods/: Cargo.toml
aes-r0-optimised/: Makefile
aes-r0-optimised/aesencryption/: README.md
aes-r0-optimised/host/: Cargo.toml
aes-r0/host/: Cargo.toml
aes-r0/methods/guest/: Cargo.toml
aes-r0/methods/guest/src/: main.rs
aes-rustcrypto-r0/: README.md
aes-rustcrypto-r0/host/: Cargo.toml
aes-rustcrypto-r0/methods/guest/: Cargo.toml
aes-rustcrypto-r0/methods/guest/src/: main.rs
bench-harness/: aggregate.py  config.operations.toml  config.toml  lowmc_function_breakdown.py  plot.py  requirements.txt  runner.py  schema.md
docs/: Justfile  Makefile  abbrev.tex  abstract.tex  acknowledgements.tex  chapter1.aux  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  chapter9.tex  fyp-report.aux  fyp-report.blg  fyp-report.fdb_latexmk  fyp-report.fls  fyp-report.lof  fyp-report.lot  fyp-report.out  fyp-report.tex  fyp-report.toc  glossary.tex  references.bib
low-mc-optimised/: .gitignore  README.md
lowmc-r0/: Justfile  README.md
lowmc-r0-optimised/: Cargo.toml  Makefile  README.md
lowmc-r0/host/: Cargo.toml
lowmc-r0/host/src/: main.rs
lowmc-r0/methods/guest/: Cargo.toml
lowmc-r0/methods/guest/src/: main.rs
notes/: notes.md 
operation-bnchmrk-r0/: Justfile  Makefile
salsa-r0/: .gitignore  Cargo.toml  Justfile  Makefile  README.md
(+32 files in other folders)
