[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
lowmc-core = { path = "../lowmc-core" }
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
