[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }
aesencryption = { git = "https://github.com/kush-10/aesencryption.git", branch = "main" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[profile.dev]
debug = true

[profile.release]
debug = true
