[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ["std"] }
aes = { version = "0.8", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
