[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
lowmc-core = { path = "../../lowmc-core" }
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[profile.dev]
debug = true

[profile.release]
debug = true
